--- a/index.html
+++ b/index.html
@@ -9,7 +9,21 @@
 </head>
 
 <body>
-  start
+  <svg>
+      <rect/>
+      <circle/>
+      <rect/>
+      <polygon/>
+      <text>
+        Willkommen!
+      </text>
+      <g>
+          <path/>
+      `   <circle>
+          <animateMotion/>
+        </circle>
+      </g>
+  </svg>
 </body>
 
 </html>
